View Issue Details

IDProjectCategoryView StatusLast Update
0025991Open CASCADEOCCT:Codingpublic2015-05-14 16:33
ReporternbvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version6.9.0Fixed in Version6.9.0 
Summary0025991: Fix cyclic dependency between IntPatch, GeomInt and GeomAPI packages
DescriptionWOK cannot build current OCCT-master (from 27 Mar 2015) because there is Cyclic dependency between IntPatch, GeomInt and GeomAPI.

It has appeared after the fix bug #25416.
Steps To ReproduceTest case is not required.
TagsNo tags attached.
Test case numberNot needed

Relationships

related to 0021061 closedbugmaster Open CASCADE Elaborate a tool to control cyclic dependencies between toolkits 
related to 0025992 closedbugmaster Open CASCADE Method Geom2dAPI_InterCurveCurve::Segment(...) requires detail revision 

Activities

git

2015-03-31 10:49

administrator   ~0039008

Branch CR25991 has been created by nbv.

SHA-1: 5235b98e2c86dcf43ac83f5f3bf5e6c7437206b3


Detailed log of new commits:

Author: nbv
Date: Mon Mar 30 13:03:02 2015 +0300

    0025991: Cyclic dependency in OCCT detected by WOK compiler

nbv

2015-03-31 11:08

developer   ~0039009

Dear Mikhail!

Please review CR25991 branch.

msv

2015-03-31 12:01

developer   ~0039015

Remarks:

src\GeomInt\GeomInt_IntSS_1.cxx
- 2070: this line is extra.
- 2287: Tol must be computed as distance in 3D between middle point on curve and projected point on surface.

src\IntPatch\IntPatch_ImpImpIntersection_0.gxx
- 1692: check for theExtr.NbExt() too.

git

2015-03-31 12:17

administrator   ~0039018

Branch CR25991 has been updated by nbv.

SHA-1: bf1c9118c795b61cdd83706ea459fb9441c34010


Detailed log of new commits:

Author: nbv
Date: Tue Mar 31 12:16:49 2015 +0300

    Changes in accordance with the last remarks

git

2015-03-31 12:19

administrator   ~0039019

Branch CR25991 has been updated forcibly by nbv.

SHA-1: 2888f084606d134f67333af76f55f1733662bc7f

nbv

2015-03-31 12:20

developer   ~0039020

Dear Mikhail!

Please review CR25991 branch again.

msv

2015-03-31 12:36

developer   ~0039021

Remarks:

src\GeomInt\GeomInt_IntSS_1.cxx
- 2284: no need to call Value, as we know it is a line, so pmidcurve2d can be computed as average between p1 and p2.
- 2287: Sorry, I was wrong in previous remark. Nor you compute distance between middle point of curve 2d lying on surface and projection of middle point of curve 3D lying also on surface. It is not correct. You should compute distance between PMid and aPC, so that to compare points got by same parameter (0.5) on both curves 2D and 3D. Projection of PMid is not needed.

git

2015-03-31 13:36

administrator   ~0039024

Branch CR25991 has been updated by nbv.

SHA-1: 46af72dffd20ca9c9e8f8ac7c97a42c03b8afe04


Detailed log of new commits:

Author: nbv
Date: Tue Mar 31 13:35:56 2015 +0300

    Another change in accordance with the last remark.

nbv

2015-03-31 13:36

developer   ~0039025

Dear Mikhail!

Please review CR25991 branch again.

msv

2015-03-31 14:37

developer   ~0039033

Remarks:

src\GeomInt\GeomInt_IntSS_1.cxx
- 2286: PMid is computed incorrect such way, earlier it was right (C->Value((f + l) * 0.5)). I told that we can get average only for 2D points. For 3D curve we don't know anything about its form.
- 2290: This expression will be more clear if we use Max function.

git

2015-03-31 15:24

administrator   ~0039038

Branch CR25991 has been updated by nbv.

SHA-1: 564c517b4dc7351f96ad3f320219191b5f99c7c3


Detailed log of new commits:

Author: nbv
Date: Tue Mar 31 15:23:49 2015 +0300

    Small correction in accordance with the last remark

msv

2015-03-31 17:31

developer   ~0039051

Reviewed.

mkv

2015-04-01 14:11

tester   ~0039092

Dear BugMaster,
Branch CR25991 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 564c517b4dc7351f96ad3f320219191b5f99c7c3

Number of compiler warnings:

occt component :
Linux: 18 (18 on master)
Windows: 0 (0 on master)

Linux: 4 (4 on master)
Windows: 0 (0 on master)

Regressions/Differences:
http://occt-tests/CR25991-master-occt-64/Debian60-64/summary.html
http://occt-tests/CR25991-master-occt-64/Windows-64-VC10/summary.html
bugs modalg_1(006) bug13209_1, bug13209_2, bug13209_3, bug13209_4, bug13211_1, bug13211_2, bug13211_3, bug13211_4, bug13211_5, bug13211_6, bug13211_7, bug13211_8, bug13211_9, bug13211_10, bug13211_11
bugs modalg_2(007) bug497_3
bugs modalg_4(009) bug6272_1, bug6272_2, bug6272_6
bugs moddata_2(012) bug26_1, bug26_2

Testing cases:
Not needed

Testing on Linux:
occt component :
Total MEMORY difference: 86251242 / 87690639 [-1.64%]
Total CPU difference: 52494.319999999985 / 53987.32000000018 [-2.77%]
products component :
Total MEMORY difference: 23135408 / 23072364 [+0.27%]
Total CPU difference: 15270.179999999966 / 15577.929999999984 [-1.98%]

Testing on Windows:
occt component :
Total MEMORY difference: 56715025 / 56727606 [-0.02%]
Total CPU difference: 16082.923094999784 / 16045.389254399674 [+0.23%]
products component :
Total MEMORY difference: 12914976 / 12890096 [+0.19%]
Total CPU difference: 5364.312786399981 / 5360.303560699987 [+0.07%]

There are no differences in images found by testdiff.

git

2015-04-01 16:42

administrator   ~0039110

Branch CR25991 has been updated forcibly by nbv.

SHA-1: 7d49fcd65683a81b11edd0e4bb4c00ef324be4fa

nbv

2015-04-01 16:44

developer   ~0039111

Dear Mikhail!

Please review CR25991 branch.

git

2015-04-01 17:12

administrator   ~0039112

Branch CR25991 has been updated forcibly by nbv.

SHA-1: f05907df59fdb39d5195cee8cdd9b0795fae49dc

msv

2015-04-01 18:23

developer   ~0039119

Reviewed.

mkv

2015-04-02 14:25

tester   ~0039148

Dear BugMaster,
Branch CR25991 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: f05907df59fdb39d5195cee8cdd9b0795fae49dc

Number of compiler warnings:

occt component :
Linux: 18 (18 on master)
Windows: 0 (0 on master)

products component :
Linux: 4 (4 on master)
Windows: 0 (0 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
Not needed

Testing on Linux:
occt component :
Total MEMORY difference: 86810889 / 87731477 [-1.05%]
Total CPU difference: 53898.33000000041 / 54199.67000000014 [-0.56%]
products component :
Total MEMORY difference: 23137219 / 23044092 [+0.40%]
Total CPU difference: 15499.789999999985 / 15490.389999999983 [+0.06%]

Testing on Windows:
occt component :
Total MEMORY difference: 56846556 / 56859601 [-0.02%]
Total CPU difference: 16319.389410799788 / 16113.24968939968 [+1.28%]
products component :
Total MEMORY difference: 12914978 / 12890096 [+0.19%]
Total CPU difference: 5437.78925739998 / 5360.303560699987 [+1.45%]

There are no differences in images found by testdiff.

git

2015-05-14 16:33

administrator   ~0041051

Branch CR25991 has been deleted by inv.

SHA-1: f05907df59fdb39d5195cee8cdd9b0795fae49dc

Related Changesets

occt: master 7a91ad6e

2015-04-03 15:41:51

nbv


Committer: bugmaster Details Diff
0025991: Cyclic dependency in OCCT detected by WOK compiler

The reason of possible exception has been eliminated.
Affected Issues
0025991
mod - src/GeomInt/GeomInt_IntSS_1.cxx Diff File
mod - src/IntPatch/IntPatch_ImpImpIntersection_0.gxx Diff File

Issue History

Date Modified Username Field Change
2015-03-31 09:59 nbv New Issue
2015-03-31 09:59 nbv Assigned To => nbv
2015-03-31 10:49 git Note Added: 0039008
2015-03-31 11:00 nbv Status new => assigned
2015-03-31 11:08 nbv Note Added: 0039009
2015-03-31 11:08 nbv Assigned To nbv => msv
2015-03-31 11:08 nbv Status assigned => resolved
2015-03-31 11:08 msv Relationship added related to 0021061
2015-03-31 11:33 nbv Relationship added related to 0025992
2015-03-31 12:01 msv Note Added: 0039015
2015-03-31 12:01 msv Assigned To msv => nbv
2015-03-31 12:01 msv Status resolved => assigned
2015-03-31 12:17 git Note Added: 0039018
2015-03-31 12:19 git Note Added: 0039019
2015-03-31 12:20 nbv Note Added: 0039020
2015-03-31 12:20 nbv Assigned To nbv => msv
2015-03-31 12:20 nbv Status assigned => resolved
2015-03-31 12:36 msv Note Added: 0039021
2015-03-31 12:36 msv Assigned To msv => nbv
2015-03-31 12:36 msv Status resolved => assigned
2015-03-31 13:36 git Note Added: 0039024
2015-03-31 13:36 nbv Note Added: 0039025
2015-03-31 13:36 nbv Assigned To nbv => msv
2015-03-31 13:36 nbv Status assigned => resolved
2015-03-31 14:37 msv Note Added: 0039033
2015-03-31 14:37 msv Assigned To msv => nbv
2015-03-31 14:37 msv Status resolved => assigned
2015-03-31 15:24 git Note Added: 0039038
2015-03-31 15:25 nbv Assigned To nbv => msv
2015-03-31 15:25 nbv Status assigned => resolved
2015-03-31 17:31 msv Note Added: 0039051
2015-03-31 17:31 msv Assigned To msv => bugmaster
2015-03-31 17:31 msv Status resolved => reviewed
2015-03-31 17:35 mkv Assigned To bugmaster => mkv
2015-03-31 17:54 mkv Assigned To mkv => bugmaster
2015-03-31 18:21 mkv Assigned To bugmaster => mkv
2015-04-01 14:11 mkv Note Added: 0039092
2015-04-01 14:11 mkv Assigned To mkv => nbv
2015-04-01 14:11 mkv Status reviewed => assigned
2015-04-01 14:11 mkv Test case number => Not needed
2015-04-01 16:42 git Note Added: 0039110
2015-04-01 16:44 nbv Note Added: 0039111
2015-04-01 16:44 nbv Assigned To nbv => msv
2015-04-01 16:44 nbv Status assigned => resolved
2015-04-01 17:12 git Note Added: 0039112
2015-04-01 18:23 msv Note Added: 0039119
2015-04-01 18:23 msv Assigned To msv => bugmaster
2015-04-01 18:23 msv Status resolved => reviewed
2015-04-01 18:31 mkv Assigned To bugmaster => mkv
2015-04-01 20:09 kgv Summary Cyclic dependency in OCCT detected by WOK compiler => Fix cyclic dependency between IntPatch, GeomInt and GeomAPI packages
2015-04-02 14:25 mkv Note Added: 0039148
2015-04-02 14:25 mkv Assigned To mkv => bugmaster
2015-04-02 14:25 mkv Status reviewed => tested
2015-04-07 16:08 bugmaster Changeset attached => occt master 7a91ad6e
2015-04-07 16:08 bugmaster Status tested => verified
2015-04-07 16:08 bugmaster Resolution open => fixed
2015-05-14 15:28 aiv Status verified => closed
2015-05-14 15:31 aiv Fixed in Version => 6.9.0
2015-05-14 16:33 git Note Added: 0041051