0025991: Cyclic dependency in OCCT detected by WOK compiler

The reason of possible exception has been eliminated.